{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "PlayerBattleInput",
            "id": "1e1e0446-01d5-41b9-b9c3-5d0c97751721",
            "actions": [
                {
                    "name": "BattleOptionsScroll",
                    "type": "Button",
                    "id": "e1586c84-7464-4fc7-b0e6-3b318e20eb64",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TargetPosition",
                    "type": "Value",
                    "id": "8543c811-3418-4642-bd9e-ee4789bc3775",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SelectItem",
                    "type": "Button",
                    "id": "e594c38d-48ce-4656-86a8-837065ba2fba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "YesOrNot",
                    "type": "Button",
                    "id": "faacadd8-a482-4575-92b4-2efe93bd1f08",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShiftItemMenu",
                    "type": "Button",
                    "id": "7194ed7b-f05c-4696-bfaf-88b7cb959c65",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bdd5bf08-6ae5-48b3-bb18-58dd7d4ad9fb",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TargetPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "43c4ac76-84ee-4ac1-aecb-1b0127b71f52",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "24883b7d-dfac-4eb3-ba3c-be3b24c26cd6",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eee56659-ad9e-453e-b000-11498608079e",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa9c3e7b-8a21-4f37-a781-a5fddb1366b1",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "51d782dd-3f99-413e-b20f-fc0faee0f35c",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "8b599d9f-f9af-454c-ade0-b20efdb32615",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YesOrNot",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "0da20216-8c74-491a-982c-0622a8868264",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YesOrNot",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "68ab1968-774e-4338-b5b8-c7a5b88ddad1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YesOrNot",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Shift",
                    "id": "fad2b882-9ea1-4536-aa72-dc55f50d2f14",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShiftItemMenu",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c802e36c-efdf-4298-802e-6b8282295e88",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShiftItemMenu",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "b7913177-2890-4271-8dbc-91d9242b1eb1",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShiftItemMenu",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Scroll",
                    "id": "86d7b167-acd3-40d3-9a44-58140666978f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BattleOptionsScroll",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "351b0f0c-1cfa-4abf-afb7-3532cb03a801",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BattleOptionsScroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "735f6b6d-b65c-4622-a10d-02676bd7a9d2",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BattleOptionsScroll",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerDefaultInput",
            "id": "8a2f0904-568f-4fa1-84b5-8ac13a1237d5",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "ff8b5fa0-7cbd-428c-b08d-f23d0b0c4792",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "fc8e5300-f6fb-4e70-b17d-a95c7dc3dcec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "c993c611-2836-4d96-b3db-ceba19943373",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b5db1424-e92d-411e-9e77-7fa9571adb35",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ddd0d028-c942-4e3b-be8b-d6dbb0314e51",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6fe4d8c3-760d-469a-8aa9-62b6d5d28b29",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8be29344-3bb9-474b-b214-b80cd01d83d9",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1bb04e5f-c632-49a6-a597-eb68cb647a58",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerMenuInput",
            "id": "8c315c51-bc6c-4aac-b326-ec964175c2cb",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "667bc80d-7966-4e5e-ab9e-c18204614d46",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b3d44a43-31ca-461c-9455-61ec1b931397",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}